# jumpax

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: deploy-docs.yml  examples.yml  lint.yml  tests.yml
_static/: custom_css.css
api/aggregators/: index.html
api/cme/: index.html
api/jumps/: index.html
api/save/: index.html
api/solution/: index.html
api/solve/: index.html
benchmarking/: julia_benchmark.jl  julia_benchmark.py  jumpax_benchmark.py  plot_benchmarks.py  rebop_benchmark.py
benchmarking/results/: julia_vilar_no_compile.csv  julia_vilar_with_compile.csv  jumpax_vilar_gpu_no_compile.csv  jumpax_vilar_no_compile.csv  jumpax_vilar_with_compile.csv  rebop_vilar.csv
docs/: index.md
docs/api/: aggregators.md  cme.md  jumps.md  save.md  solution.md  solve.md
examples/: 01_poisson_process.ipynb  02_continuous_time_gillespie_methods.ipynb  03_jump_diffusion.ipynb  04_exact_cme_solver.ipynb
examples/01_poisson_process/: index.html
examples/02_continuous_time_gillespie_methods/: index.html
examples/03_jump_diffusion/: index.html
examples/04_exact_cme_solver/: index.html
jumpax/: __init__.py  _cme.py  _custom_meta.py  _custom_types.py  _jumps.py  _save.py  _solution.py  _solve.py
jumpax/_aggregators/: __init__.py  base.py  hybrid.py  ssa.py  tau.py  vrj.py
search/: search_index.json
tests/: test_cme.py  test_readme.py  test_strict_meta.py
