[project]
name = "jumpax"
version = "0.1.0"
description = "Jump Processes in JAX"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "lockwo"}
]
keywords = ["jax", "jump-process", "differential-equations", "ssa", "scientific-machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]
urls = { repository = "https://github.com/lockwo/jumpax" }

dependencies = [
    "equinox>=0.11.2",
    "jaxtyping>=0.2.23",
    "ihoop>=0.1.1",
    "diffrax>=0.6.0",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
examples = [
    "matplotlib>=3.7.1",
]
testing = [
    "pytest>=7.4.0",
    "nbmake>=1.5.0",
    "ruff==0.11.0",
    "pyright==1.1.399",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-ipynb>=0.1.0",
    "mkdocs-include-exclude-files>=0.0.1",
    "hippogriffe>=0.2.0",
]

[tool.setuptools]
packages = { find = { include = ["jumpax", "jumpax.*"] } }

[tool.ruff]
extend-include = ["*.ipynb"]
src = []

[tool.ruff.lint]
# I001: isort import sorting
# F401: Unused imports
fixable = ["I001", "F401"]

# E402: Module level import not at top of file
# E731: Do not assign a lambda expression, use a def
# E741: Ambiguous variable name
# F722: Syntax error in forward annotation
ignore = ["E402", "E731", "E741", "F722"]

# Error codes to check for during linting
# E: pycodestyle errors
# F: pyflakes errors
# I001: isort import sorting
select = ["E", "F", "I001"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
order-by-type = false

[tool.pyright]
reportIncompatibleMethodOverride = true
reportUnnecessaryTypeIgnoreComment = true
include = ["jumpax"]