[project]
name = "jumpax"
version = "0.1.1"
description = "Jump Processes in JAX"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "lockwo"}
]
keywords = ["jax", "jump-process", "differential-equations", "ssa", "scientific-machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]
urls = { repository = "https://github.com/lockwo/jumpax" }

dependencies = [
    "equinox>=0.11.2",
    "ihoop>=0.1.1",
    "diffrax>=0.6.0",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
examples = [
    "matplotlib>=3.7.1",
]
testing = [
    "pytest>=7.4.0",
    "nbmake>=1.5.0",
    "pyright==1.1.408",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-ipynb>=0.1.0",
    "mkdocs-include-exclude-files>=0.0.1",
    "hippogriffe>=0.2.0",
]

[tool.setuptools]
packages = { find = { include = ["jumpax", "jumpax.*"] } }

[tool.black]
target-version = ["py312"]

[tool.isort]
profile = "black"
combine_as_imports = true
lines_after_imports = -1
order_by_type = false

[tool.pyright]
reportIncompatibleMethodOverride = true
reportUnnecessaryTypeIgnoreComment = true
include = ["jumpax"]